_sass/theme/_subscribe.scss
/* --------------------------------------------------------
            Container and Intro Text
-------------------------------------------------------- */
.subscribe {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    grid-auto-flow: row;    
    grid-gap: .75rem;
    margin: 1.5rem auto; //  make this margin and below padding a mixin or extend
    padding: 0 1rem;
    text-align: center;
    > * {
        margin-top: 0;
        margin-bottom: 0;
    }
    p {
        @include media-query($medium) {
            font-size: $base-font-size * 1.308;
            line-height: $base-font-size * 1.615;
        }
    }
}
/* --------------------------------------------------------
            Subscribe Form
-------------------------------------------------------- */
.mc-field-group { 
    display: inline-block; 
}
#mc_embed_signup input.email {
    font-family: $Monospace;
    font-size: .85rem; 
    font-weight: 900;
    border-top: none; border-right: none; border-left: none;
    border-bottom: 1px solid v(text);
    border-radius: none;
    color: v(brand); 
    background-color: v(bg); 
    box-sizing:border-box; 
    padding: $spacing-unit * .5 0;
    display: inline-block; 
    margin: 0; 
    width: 170px; 
    vertical-align:top;
    @include media-query($small) {
        width: 190px;        
    }
    @include media-query($medium) {
        width: 275px;
        font-size: $base-font-size * 1.308;        
    }
}
#mc_embed_signup input {
    &::-webkit-input-placeholder {
        color: v(brand);
        font-weight: 400;
    }
    &::-moz-placeholder {
        color: v(brand);
        opacity: 1;
    }
    &:-ms-input-placeholder {
        color: v(brand);
    }
    &:-moz-placeholder {
        color: v(brand);
        opacity: 1;
    }
    &:focus {
        outline: none;
    }
}
#mc_embed_signup label {
    display:block;
    font-size:16px;
    padding-bottom:10px;
    font-weight:bold;
}
#mc_embed_signup .clear {
    display: inline-block;
    @include media-query($small) {
        padding-left: $spacing-unit * 2;
    }
}
#mc_embed_signup .button {
    font-family: $SansSerif;
    font-size: .85rem;
    border: none; 
    -webkit-border-radius: 4px; 
    -moz-border-radius: 4px; 
    border-radius: 4px; 
    color: v(brand-darkest-faded); 
    background-color: v(brand); 
    box-sizing:border-box; 
    padding:$spacing-unit * .5 $spacing-unit * 2; 
    display: inline-block; 
    margin: 0; 
    transition: all 0.08s ease-in-out 0.08s;
    @include media-query($medium) {
        font-size: $base-font-size * 1.308;        
    }
}
#mc_embed_signup .button:hover {
    cursor:pointer;
}
#mc_embed_signup div#mce-responses {
    float:left; top:-1.4em; padding:0 .5em 0 .5em; overflow:hidden; width:90%;margin: 0 5%; clear: both;
}
#mc_embed_signup div.response {
    margin:1em 0; padding:1em .5em .5em 0; font-weight:bold; float:left; top:-1.5em; z-index:1; width:80%;
}
#mc_embed_signup #mce-error-response {
    display:none;
}
#mc_embed_signup #mce-success-response {
    color:#529214; display:none;
}
#mc_embed_signup label.error {
    display:block; float:none; width:auto; margin-left:1.05em; text-align:left; padding:.5em 0;
}

